--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# cmake
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -9,3 +10,8 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+# visual studio 
+out/*
+.vs
+.vscode
