completed full persistence
- added more implementations
- small typo fixes in previous implementations
- finished `full persistence`

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -9,7 +9,7 @@ if (MakingDataStructuresPersistent)
 
 	set(HEADERS
 		"MakingDataStructuresPersistent//fatnode.h"	
-	 "MakingDataStructuresPersistent/nodecopying.h")
+	 "MakingDataStructuresPersistent/nodecopying.h" "MakingDataStructuresPersistent/fatnode_f.h")
 endif()
 
 add_library(MakingDataStructuresPersistent ${SRCES} ${HEADERS})
