--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,19 +1,38 @@
 cmake_minimum_required(VERSION 3.8)
 
-set(MakingDataStructuresPersistentTest 1)
+set(MakingDataStructuresPersistentTest 0)
+set(RTree 1)
 
 if (MakingDataStructuresPersistentTest)
 	set(SRCES 
-		"MakingDataStructuresPersistentTest//fatnodetest.c"	
+		"MakingDataStructuresPersistentTest/fatnodetest.c"	
+	)
+	add_executable(
+		MakingDataStructuresPersistentTest 
+		${SRCES})
+	target_include_directories(
+		MakingDataStructuresPersistentTest
+		PRIVATE MakingDataStructuresPersistent check
+	)
+
+	target_link_libraries(
+		MakingDataStructuresPersistentTest
+		PRIVATE MakingDataStructuresPersistent check
 	)
 endif()
 
-add_executable(MakingDataStructuresPersistentTest ${SRCES})
+if (RTree)
+	set(RTREE_SRCES
+		"RTree/rtreetest.c"	
+	)
+	add_executable(
+		RTreeTest ${RTREE_SRCES})
 
-target_include_directories(MakingDataStructuresPersistentTest
-	PRIVATE MakingDataStructuresPersistent check
-)
+	target_include_directories(RTreeTest
+		PRIVATE RTree check
+	)
 
-target_link_libraries(MakingDataStructuresPersistentTest
-	PRIVATE MakingDataStructuresPersistent check
-)
+	target_link_libraries(RTreeTest
+		PRIVATE RTree check
+	)
+endif()
