--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 
 set(MakingDataStructuresPersistentTest 0)
-set(RTree 1)
+set(RTree 0)
+set(BTree 1)
 
 if (MakingDataStructuresPersistentTest)
 	set(SRCES 
@@ -34,5 +35,21 @@ if (RTree)
 
 	target_link_libraries(RTreeTest
 		PRIVATE RTree check
+	)
+endif()
+
+if (BTree)
+	set(BTREE_SRCES
+		"BTree/btreetest.c"	
+	)
+	add_executable(
+		BTreeTest ${BTREE_SRCES})
+
+	target_include_directories(BTreeTest
+		PRIVATE BTree check
+	)
+
+	target_link_libraries(BTreeTest
+		PRIVATE BTree check
 	)
 endif()
